<resources>
    <string name="app_name">Tute04MAD</string>
    <string name="select_btn">Select All</string>
    <string name="add_btn">Add</string>
    <string name="sign_btn">Sign In</string>
    <string name="del_btn">Delete</string>
    <string name="upd_btn">Update</string>
    <string name="name_feild">Name</string>
    <string name="pass_feild">Password</string>
    <string name="usr_name">User Name</string>
    <string name="pass">Password</string>
    <string name="ok_btn">Okay</string>
    <string name="login_btn">Login</string>
</resources>
